@@ -154,6 +154,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add a new hook LinkerMakeExternalLink to allow extensions to modify the output of
   external links.
 * (bug 14132) Allow user to disable bot edits from being output to UDP. 
+* (bug 14328) jsMsg() within Wikibits now accepts a DOM object, not just a string  
   
 === Bug fixes in 1.13 ===
 
